# flipper-ble-mcp

./: .coverage  .gitignore  .pre-commit-config.yaml  01-architecture.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  build-kb-index.py  build-use-cases-json.py  glossary.md  legal-and-safety.md  llms-full.txt  llms.txt  pyproject.toml  server.json  uc-index.json  use-cases-model.md  use-cases.csv  use-cases.json
.claude/commands/: flipper-learn.md
.claude/skills/flipper/: SKILL.md
.claude/skills/flipper/references/: capture-template.md  kb-map.md  routine-index.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app/: Info.plist  build_app.sh
bluetooth/: README.md  airtag-tracker-detection.md  ble-sniffer-addon.md  ble-spam.md  classic.md  interception.md
capabilities/: badusb.md  ibutton.md  infrared.md  nfc-rfid.md  sub-ghz.md
cards/: README.md  cloning-matrix.md  iclass-picopass.md  lf-125khz.md  mifare.md  nfc-theory.md
firmware/: README.md  migration-xtreme-to-momentum.md  momentum.md  official.md  roguemaster.md  unleashed.md
hardware/: README.md  addons-explained.md  buying-guide.md  esp32-firmware-comparison.md  esp32-marauder-module.md  gpio-addons-current.md  gpio-addons-potential.md
kb-local/: README.md
resources/: apps-badusb-automotive-misc.md  apps-esp-ble-nrf24.md  apps-nfc.md  apps-rfid-ibutton-infrared.md  apps-subghz.md  best-github-repos.md  community-and-video.md  cool-projects.md  flipper-ble-control.md  flipper-control-mcp-server.md  flipper-control-playbook.md  flipper-healthwatch.md  flipper-mcp-and-ai.md  flipper-read-mcp-server.md  github-landscape.md  learning-and-docs.md  mcp-setup-claude-code.md  notable-apps-and-data.md  subghz-device-repos.md  tools-and-software.md
scripts/: snapshot.sh
src/flipper_ble_mcp/: __init__.py  ble_worker.py  flipper_bled.py  flipper_healthwatch.py  server.py
src/flipper_ble_mcp/_proto/: NOTICE  __init__.py
tests/: test_healthwatch_eval.py  test_readonly_guard.py  test_worker_varint.py
theory/: human-layer.md  relay-attacks.md  rolling-codes.md
topics/: ai-flipper-possibilities.md  remaining-gaps.md  security-pentest.md  subghz-region-lock.md  tinkering.md  use-cases.md
wifi/: README.md  deauth.md  evil-portal.md  marauder-mcp-scan.md  own-network-audit.md  recon-and-attacks.md  wpa-handshake-pmkid.md
