[project]
name = "flipper-ble-mcp"
version = "0.1.0"
description = "Wirelessly control a Flipper Zero over Bluetooth LE from Claude — an MCP server with a self-evolving knowledge base"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ruslan Pogorelov", email = "rus.pgr@gmail.com" }]
keywords = ["flipper-zero", "mcp", "model-context-protocol", "bluetooth", "ble", "claude", "hardware"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: MacOS X",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
]
dependencies = [
  "mcp>=1.2",
  "bleak>=0.22",
  "flipperzero-protobuf>=0.1",   # BSD-3-Clause; community Flipper protobuf bindings (github.com/evilpete/flipperzero_protobuf_py)
  "numpy>=2",                    # transitive (via flipperzero-protobuf); pin to a wheel-having version so macOS arm64 installs don't build from source
]

[project.optional-dependencies]
dev = ["ruff==0.15.18", "pytest", "pytest-cov"]

[project.scripts]
flipper-ble-mcp = "flipper_ble_mcp.server:main"

[project.urls]
Homepage = "https://github.com/pogorelov-labs/flipper-ble-mcp"
Issues = "https://github.com/pogorelov-labs/flipper-ble-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flipper_ble_mcp"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501", "E402", "E741"]  # line length -> formatter; intentional late imports; one ambiguous var name

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["flipper_ble_mcp"]

[tool.coverage.report]
show_missing = true
